--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>   
       </div>
 
-       <div class="main__workExperience wrapper__md" id="section-1"> 
+       <div class="main__workExperience wrapper_md" id="section-1"> 
         <!-- <div class="wrapper"> 
           <div class="main__text__workExperience">
             <p class="main__workExperience-p">work experience</p>
